--- a/sangyeob/.env.sample
+++ b/sangyeob/.env.sample
@@ -1,9 +1,8 @@
-PORT = YOUR PORT NUMBER SHOULD BE HERE
 
-TYPEORM_CONNECTION = mysql
-TYPEORM_HOST = hostip
-TYPEORM_USERNAME = username
-TYPEORM_PASSWORD = password
-TYPEORM_DATABASE = schema
-TYPEORM_PORT = portnumber
-TYPEORM_LOGGING =TRUE
+TYPEORM_CONNECTION = CONNECTION
+TYPEORM_HOST = HOST
+TYPEORM_USERNAME = USERNAME
+TYPEORM_PASSWORD = PASSWORD
+TYPEORM_DATABASE = DATABASE
+TYPEORM_PORT = PORT
+TYPEORM_LOGGING =LOGGING
