--- a/sangyeob/.env.sample
+++ b/sangyeob/.env.sample
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://username:password@127.0.0.1:3306/database_name"
+DATABASE_URL="rdbmsType://username:password@iphost:portNumber/databaseName"
 
 PORT = YOUR PORT NUMBER SHOULD BE HERE
 
