[이영서] Assignment 1 : Express API - 초기 환경 세팅(수정)

--- a/youngseo/.env.sample
+++ b/youngseo/.env.sample
@@ -1,9 +1,9 @@
 PORT = YOUR PORT NUMBER SHOULD BE HERE!
 
-TYPEORM_CONNECTION = mysql
+TYPEORM_CONNECTION = db_type
 TYPEORM_HOST = HOST NUMBER
 TYPEORM_USERNAME = root
 TYPEORM_PASSWORD = myPassword
 TYPEORM_DATABASE = myDB
-TYPEORM_PORT = 3306
+TYPEORM_PORT = db_port
 TYPEORM_LOGGING =TRUE 
