--- a/sangwon/.env.sample
+++ b/sangwon/.env.sample
@@ -1,9 +1,9 @@
 PORT = YOUR PORT NUMBER HOULD BE HERE!
 
-TYPEORM_CONNECTION = mysql
+TYPEORM_CONNECTION = yourRDBMS
 TYPEORM_HOST = host
 TYPEORM_USERNAME = username
 TYPEORM_PASSWORD = Password
 TYPEORM_DATABASE = myDB
-TYPEORM_PORT = 3306
+TYPEORM_PORT = db_port
 TYPEORM_LOGGING = TRUE
