--- a/youngseo/.env.sample
+++ b/youngseo/.env.sample
@@ -1,3 +1,4 @@
+DATABASE_URL = "db_type://username:password@127.0.0.1:db_port/database_name"
 PORT = YOUR PORT NUMBER SHOULD BE HERE!
 
 TYPEORM_CONNECTION = db_type
