--- a/jaeseon/.env.sample
+++ b/jaeseon/.env.sample
@@ -5,7 +5,7 @@ PORT = YOUR PORT NUMBER SHOULD BE HERE
 TYPEORM_CONNECTION = CONNECTION
 TYPEORM_HOST = HOST
 TYPEORM_USERNAME = USERNAME
-TYPEORM_PASSWORD = Password
+TYPEORM_PASSWORD = PASSWORD
 TYPEORM_DATABASE = DATABASE
 TYPEORM_PORT = PORT
 TYPEORM_LOGGING = LOGGING
