--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudio,visualstudiocode,vim,macos,zsh,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,visualstudio,visualstudiocode,vim,macos,zsh,linux
+### DATABASES ###
+schema.sql
 
 ### Linux ###
 *~
