[2차수정]초기 환경 세팅

--- a/changhyun/.env.sample
+++ b/changhyun/.env.sample
@@ -1,9 +1,11 @@
-DATABASE_URL = express_typeorm
+DATABASE_URL = "rdbmsType://username:password@iphost:portNumber/databaseName"
 
-TYPEORM_CONNECTION = mysqul
+PORT = PORT
+
+TYPEORM_CONNECTION = rdbms
 TYPEORM_HOST = host number
 TYPEORM_USERNAME = root
 TYPEORM_PASSWORD = myPassword
-TYPEORM_DATABASE = express_typeorm
-TYPEORM_PORT = 3306
+TYPEORM_DATABASE = database
+TYPEORM_PORT = rdbms port
 TYPEORM_LOGGING = TRUE
