[조상원] Assignment 1 : Express API - 초기 환경 세팅(수정)

--- a/sangwon/.env.sample
+++ b/sangwon/.env.sample
@@ -1,4 +1,6 @@
-PORT = YOUR PORT NUMBER HOULD BE HERE!
+DATABASE_URL="rdbmsType://username:password@iphost:portNumber/databaseName"
+
+PORT = YOUR PORT NUMBER SHOULD BE HERE!
 
 TYPEORM_CONNECTION = yourRDBMS
 TYPEORM_HOST = host
