--- a/jaeseon/package.json
+++ b/jaeseon/package.json
@@ -19,5 +19,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "typeorm": "^0.3.10"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
