--- a/youngseo/.env.sample
+++ b/youngseo/.env.sample
@@ -2,10 +2,11 @@ DATABASE_URL = "db_type://username:password@127.0.0.1:db_port/database_name"
 
 PORT = YOUR PORT NUMBER SHOULD BE HERE!
 
-TYPEORM_CONNECTION = db_type
+TYPEORM_CONNECTION = dbType
 TYPEORM_HOST = HOST NUMBER
 TYPEORM_USERNAME = root
 TYPEORM_PASSWORD = myPassword
 TYPEORM_DATABASE = myDB
 TYPEORM_PORT = db_port
 TYPEORM_LOGGING =TRUE 
+SECRET_KEY = secretKeyNumber
