[이영서]수정요청 사항 반영

--- a/youngseo/.env.sample
+++ b/youngseo/.env.sample
@@ -9,4 +9,4 @@ TYPEORM_PASSWORD = myPassword
 TYPEORM_DATABASE = myDB
 TYPEORM_PORT = db_port
 TYPEORM_LOGGING =TRUE 
-SECRET_KEY = secretKeyNumber
+JWT_SECRET_KEY = secretKeyNumber
